--- a/exercises/4/4e.html
+++ b/exercises/4/4e.html
@@ -6,30 +6,38 @@
     cursor: pointer;
     background-color: rgb(10, 102, 194);
     color: white;
-    width: 220px;
-    height: 36px;
     border-radius: 18px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 24px;
+    padding-right: 24px;
+    vertical-align: top;
     transition: background-color 0.15s;
   }
 
   .btn-save {
     font-family: Arial;
     font-weight: bold;
-    border-width: 1px;
+    border: 1px;
     border-color: rgb(10, 102, 194);
     border-style: solid;
     cursor: pointer;
     background-color: white;
     color: rgb(10, 102, 194);
-    width: 80px;
-    height: 36px;
     border-radius: 18px;
     margin-left: 8px;
+    padding-top: 9px;
+    padding-bottom: 9px;
+    padding-left: 24px;
+    padding-right: 24px;
+    vertical-align: top;
     transition:
-      border-width 0.15s,
-      border-style 0.15s,
-      border-color 0.15s,
-      background-color 0.15s;
+      padding-top 0.12s,
+      padding-bottom 0.12s,
+      border 0.12s,
+      border-style 0.12s,
+      border-color 0.12s,
+      background-color 0.12s;
   }
 
   .btn-apply:hover {
@@ -37,7 +45,9 @@
   }
 
   .btn-save:hover {
-    border-width: 2px;
+    padding-top: 8px;
+    padding-bottom: 8px;
+    border: 2px;
     border-style: solid;
     border-color: rgb(10, 102, 194);
     background-color: rgba(226, 240, 254);
