--- a/intro-to-html/buttons.html
+++ b/intro-to-html/buttons.html
@@ -1,14 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Buttons Practice</title>
-    <link rel="stylesheet" href="buttons.css" />
-  </head>
-  <body>
-    <button class="subscribe-button">SUBSCRIBE</button>
-    <button class="join-button">JOIN</button>
-    <button class="tweet-button">Tweet</button>
-  </body>
-</html>
+<link rel="stylesheet" href="buttons.css" />
+<button class="btn-subscribe" type="button">SUBSCRIBE</button>
+<button class="btn-join" type="button">JOIN</button>
+<button class="btn-tweet" type="button">Tweet</button>
